# AVDSP

./: .gitignore  AVDSP_intro.html  README.md  module_build_info
module_avdsp/: CMakeLists.txt  module_build_info  module_description
module_avdsp/dspprogs/: Makefile  REWgenericEQ.c  SimpleFilter.c  _HCcocoon.c  _oktodacprog.c  _oktodacprog.h  _testallfunction.c  _testallfunction.h  crossover2x2lfe.c  crossover2x2lfe.h  crossoverLV6.c  fir3.txt  fir7.txt  nanosharc2x8example.xml  oktodac.c  oktodac_LX.c  oktodac_diy.c  oktodac_fabriceo.c  oktoprog.c  oktoprog2.c  testallfunction.c  testfunction.c  testrpi.c
module_avdsp/dsptests/: HCcocoon.h  crossoverLV6.h
module_avdsp/encoder/: HilbertDesign  Makefile  dsp_HilbertDesign.c  dsp_basiccreate.c  dsp_encoder.c  dsp_encoder.h  dsp_fileaccess.c  dsp_fileaccess.h  dsp_filters.c  dsp_filters.h  dsp_nanosharcxml.c  dspcreate  dspcreate.c  libavdspencoder.dylib
module_avdsp/examples/: README.md  crossover4way.txt  crossoverLV8.txt  dac8pro1  decay.txt  example1.txt  linkwitz.txt  lxmini.txt  maxload.txt  sourceselection.txt
module_avdsp/getopt/: getopt.c  getopt.h
module_avdsp/linux/: README  README.md  alsa.c  avdsp_plugin.c  dspcreate  dsprun.c  dsprunalsa.c
module_avdsp/osx/: Makefile  README.md  a.out  basic.binmake  basic.hex  basic.txt  bass.txt  crossover2x2lfe.dylib  crossoverLV6.dylib  dac8pro0  dac8pro1  dac8prodsp.h  dspcreate  dspcreateosx  dspcreateosx.mak  dsprundouble  dsprundoublefloat  dsprunfloat  dsprunfloatfloat  dsprunint  dsprunosx.c  dsprunosx.mak  libavdspencoder.dylib  minidspinfo.h  mydspprog.c  okto.txt  oktodac.dylib  oktodac.mak  oktodac_LX.dylib  oktodac_diy.dylib  oktodac_fabriceo.dylib  test  test.hex  test.mak  test.txt  test1.txt  test2.txt  testLPLR4.txt  testbase.txt  testdecim.txt  (+11 more)
module_avdsp/osxarm/: Makefile  crossover2x2lfe.dylib  crossoverLV6.dylib  (+9 more)
(+60 files in other folders)
